# manifund_eval

./: README.md  clean_screening_results.ipynb  pyproject.toml  review_results.py  utils.py
manifund_eval/: README.md  call_claude_3_7.py  explore_data.ipynb  make_projects_dataset.py  screen_grant.py  screen_projects.py
