[tool.poetry]
name = "manifund-eval"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "manifund_eval"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
ipykernel = "^6.29.5"
bs4 = "^0.0.2"
anthropic = "^0.49.0"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
aiohttp = "^3.11.13"
streamlit = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
